...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hvg-cx-9mC">
                                        <rect key="frame" x="0.0" y="8" width="71" height="47"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="47" id="CGf-sd-giQ"/>
                                        </constraints>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" image="chevron.backward" catalog="system" title="Back">
                                            <fontDescription key="titleFontDescription" type="system" pointSize="15"/>
                                        </buttonConfiguration>
                                        <connections>
                                            <action selector="backButtonTapped:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="eb7-ym-kLX"/>
                                        </connections>
                                    </button>
...
