...
            <objects>
                <viewController storyboardIdentifier="HomeViewController" id="BYZ-38-t0r" customClass="HomeViewController" customModule="TheSportsFDJ" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <searchBar contentMode="redraw" placeholder="Search by league" showsSearchResultsButton="YES" showsCancelButton="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zIi-f6-0wX">
                                <rect key="frame" x="0.0" y="44" width="414" height="51"/>
                                <textInputTraits key="textInputTraits" returnKeyType="search"/>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="nPX-GQ-1X2"/>
                                </connections>
                            </searchBar>
...
